compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bools__negation.snap
---
source: compiler-core/src/go/tests/bools.rs
expression: "pub fn negate(x) {\n    !x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
    !x
}

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Negate(x gleam_P.Bool_t) gleam_P.Bool_t {
  return !x
}
